@@ -2,12 +2,97 @@
   "type": "minecraft:block",
   "pools": [
     {
-      "name": "cable",
+      "name": "cable_blue",
       "rolls": 1,
       "entries": [
         {
           "type": "minecraft:item",
           "name": "xnet:netcable_blue"
+        }
+      ],
+      "conditions": [
+        {
+          "condition": "minecraft:block_state_property",
+          "block": "xnet:netcable",
+          "properties": {
+            "color": "blue"
+          }
+        }
+      ]
+    },
+    {
+      "name": "cable_red",
+      "rolls": 1,
+      "entries": [
+        {
+          "type": "minecraft:item",
+          "name": "xnet:netcable_red"
+        }
+      ],
+      "conditions": [
+        {
+          "condition": "minecraft:block_state_property",
+          "block": "xnet:netcable",
+          "properties": {
+            "color": "red"
+          }
+        }
+      ]
+    },
+    {
+      "name": "cable_green",
+      "rolls": 1,
+      "entries": [
+        {
+          "type": "minecraft:item",
+          "name": "xnet:netcable_green"
+        }
+      ],
+      "conditions": [
+        {
+          "condition": "minecraft:block_state_property",
+          "block": "xnet:netcable",
+          "properties": {
+            "color": "green"
+          }
+        }
+      ]
+    },
+    {
+      "name": "cable_yellow",
+      "rolls": 1,
+      "entries": [
+        {
+          "type": "minecraft:item",
+          "name": "xnet:netcable_yellow"
+        }
+      ],
+      "conditions": [
+        {
+          "condition": "minecraft:block_state_property",
+          "block": "xnet:netcable",
+          "properties": {
+            "color": "yellow"
+          }
+        }
+      ]
+    },
+    {
+      "name": "cable_routing",
+      "rolls": 1,
+      "entries": [
+        {
+          "type": "minecraft:item",
+          "name": "xnet:netcable_routing"
+        }
+      ],
+      "conditions": [
+        {
+          "condition": "minecraft:block_state_property",
+          "block": "xnet:netcable",
+          "properties": {
+            "color": "routing"
+          }
         }
       ]
     }
